tests/snapshots/files__intersection_desugar.snap
---
source: tests/files.rs
expression: snapshot_content
---
(
   (f (f (Var "a3")))
   (f (f (Var "b3")))
   (intersect (f (f (Var "a1"))) (f (f (Var "a2"))))
)
Var: 6
f: 11
intersect: 5
