tests/snapshots/files__intersection_proof_testing.snap
---
source: tests/files.rs
expression: snapshot_content
---
(
   (f (f (Var "a3")))
   (f (f (Var "b3")))
   (intersect (f (f (Var "a1"))) (f (f (Var "a2"))))
)
(let t0 (f (f (Var "a3"))))
(let t1 (f (f (Var "b3"))))
(let t2 (f (f (Var "a1"))))
(let t3 (f (f (Var "a2"))))
(let t4 (intersect t2 t3))
(let t5 (intersect (f (Var "a1")) (f (Var "a2"))))
(let t6 (f t5))
(let t7 (intersect (Var "a1") (Var "a2")))
(let t8
  (premises
                  (Sym (= (Var "a3") t7) (Fiat (= t7 (Var "a3"))))
                  (Fiat (= (f (Var "a1")) (f (Var "a1"))))
                  (Fiat (= (f (Var "a2")) (f (Var "a2"))))))
(let t9 (f1 (f (Var "a1"))))
(let t10
  (substitution
                  (x1 (Var "a1"))
                  (x2 (Var "a2"))
                  (f2 (f (Var "a2")))
                  (x3 (Var "a3"))
                  t9))
(let prf0 (Fiat (= t2 t2)))
(let t11 (x1 (f (Var "a1"))))
(let t12 (f2 t3))
(let t13 (f1 t2))
(let t14 (intersect (f (Var "a1")) (f (Var "b2"))))
(let t15 (f t14))
(let t16 (intersect (Var "b1") (Var "b2")))
(let t17
  (premises
                (Sym (= (Var "b3") t16) (Fiat (= t16 (Var "b3"))))
                (Sym
                  (= (f (Var "a1")) (f (Var "b1")))
                  (Fiat (= (f (Var "b1")) (f (Var "a1")))))
                (Fiat (= (f (Var "b2")) (f (Var "b2"))))))
(let t18
  (substitution
                (x1 (Var "b1"))
                (x2 (Var "b2"))
                (f2 (f (Var "b2")))
                (x3 (Var "b3"))
                t9))
(let t19 (f (f (Var "b2"))))
(Trans
  (= t0 t1)
  (Sym
    (= t0 t4)
    (Congr
      (= t4 t0)
      (Sym
        (= t4 t6)
        (Rule
          (= t6 t4)
          (name
            "(rule ((= x3 (intersect x1 x2))
       (= f1 (f x1))
       (= f2 (f x2)))
      ((union (intersect f1 f2) (f x3)))
         )")
          (premises
            (Rule
              (= t5 t5)
              (name
                "(rule ((= x3 (intersect x1 x2))
       (= f1 (f x1))
       (= f2 (f x2)))
      ((union (intersect f1 f2) (f x3)))
         )")
              t8
              t10)
            prf0
            (Fiat (= t3 t3)))
          (substitution t11 (x2 (f (Var "a2"))) t12 (x3 t5) t13)))
      (Sym
        (= t5 (f (Var "a3")))
        (Rule
          (= (f (Var "a3")) t5)
          (name
            "(rule ((= x3 (intersect x1 x2))
       (= f1 (f x1))
       (= f2 (f x2)))
      ((union (intersect f1 f2) (f x3)))
         )")
          t8
          t10))
      0))
  (Congr
    (= t4 t1)
    (Sym
      (= t4 t15)
      (Rule
        (= t15 t4)
        (name
          "(rule ((= x3 (intersect x1 x2))
       (= f1 (f x1))
       (= f2 (f x2)))
      ((union (intersect f1 f2) (f x3)))
         )")
        (premises
          (Rule
            (= t14 t14)
            (name
              "(rule ((= x3 (intersect x1 x2))
       (= f1 (f x1))
       (= f2 (f x2)))
      ((union (intersect f1 f2) (f x3)))
         )")
            t17
            t18)
          prf0
          (Sym (= t3 t19) (Fiat (= t19 t3))))
        (substitution t11 (x2 (f (Var "b2"))) t12 (x3 t14) t13)))
    (Sym
      (= t14 (f (Var "b3")))
      (Rule
        (= (f (Var "b3")) t14)
        (name
          "(rule ((= x3 (intersect x1 x2))
       (= f1 (f x1))
       (= f2 (f x2)))
      ((union (intersect f1 f2) (f x3)))
         )")
        t17
        t18))
    0))
(let t0 (intersect (f (Var "a1")) (f (Var "a2"))))
(let t1 (intersect (Var "a1") (Var "a2")))
(let t2 (f1 (f (Var "a1"))))
(let t3 (intersect (f (Var "a1")) (f (Var "b2"))))
(let t4 (intersect (Var "b1") (Var "b2")))
(Rule
  (= (@ExistsConstructor1) (@ExistsConstructor1))
  (name "@prove_exists_rule1")
  (premises
    (Rule
      (= (f (Var "a3")) t0)
      (name
        "(rule ((= x3 (intersect x1 x2))
       (= f1 (f x1))
       (= f2 (f x2)))
      ((union (intersect f1 f2) (f x3)))
         )")
      (premises
        (Sym (= (Var "a3") t1) (Fiat (= t1 (Var "a3"))))
        (Fiat (= (f (Var "a1")) (f (Var "a1"))))
        (Fiat (= (f (Var "a2")) (f (Var "a2")))))
      (substitution
        (x1 (Var "a1"))
        (x2 (Var "a2"))
        (f2 (f (Var "a2")))
        (x3 (Var "a3"))
        t2))
    (Rule
      (= (f (Var "b3")) t3)
      (name
        "(rule ((= x3 (intersect x1 x2))
       (= f1 (f x1))
       (= f2 (f x2)))
      ((union (intersect f1 f2) (f x3)))
         )")
      (premises
        (Sym (= (Var "b3") t4) (Fiat (= t4 (Var "b3"))))
        (Sym
          (= (f (Var "a1")) (f (Var "b1")))
          (Fiat (= (f (Var "b1")) (f (Var "a1")))))
        (Fiat (= (f (Var "b2")) (f (Var "b2")))))
      (substitution
        (x1 (Var "b1"))
        (x2 (Var "b2"))
        (f2 (f (Var "b2")))
        (x3 (Var "b3"))
        t2))
    (Fiat (= () ())))
  (substitution (@v221 t0) (@v222 t3) ($a3 (Var "a3")) ($b3 (Var "b3"))))
Var: 6
f: 11
intersect: 5
