tests/snapshots/files__interval.snap
---
source: tests/files.rs
expression: serialized
---
nodes:
  Rational-0:
    op: (rational -10 1)
    children: []
    eclass: Rational-0
    cost: 0
  lo-0:
    op: lo
    children:
      - Var-7848520443469635519
    eclass: Rational-0
    cost: 1
  Rational-11743562013128004906:
    op: (rational 100 1)
    children: []
    eclass: Rational-11743562013128004906
    cost: 0
  lo-5871781006564002453:
    op: lo
    children:
      - e-0
    eclass: Rational-11743562013128004906
    cost: 1
  Mul-0:
    op: Mul
    children:
      - x-0
      - Var-7848520443469635519
    eclass: "1"
    cost: 1
  x-0:
    op: x
    children: []
    eclass: "0"
    cost: 9223372036854776000
  String-7848520443469635519:
    op: "\"x\""
    children: []
    eclass: String-7848520443469635519
    cost: 0
  Var-7848520443469635519:
    op: Var
    children:
      - String-7848520443469635519
    eclass: "0"
    cost: 1
  e-0:
    op: e
    children: []
    eclass: "1"
    cost: 9223372036854776000
  Rational-5871781006564002453:
    op: (rational 10 1)
    children: []
    eclass: Rational-5871781006564002453
    cost: 0
  hi-0:
    op: hi
    children:
      - x-0
    eclass: Rational-5871781006564002453
    cost: 1
root_eclasses: []
class_data:
  Rational-0:
    type: Rational
  "0":
    type: Math
  Rational-11743562013128004906:
    type: Rational
  "1":
    type: Math
  String-7848520443469635519:
    type: String
  Rational-5871781006564002453:
    type: Rational

