tests/snapshots/files__lambda.snap
---
source: tests/files.rs
expression: serialized
---
nodes:
  False-0:
    op: "False"
    children: []
    eclass: "1"
    cost: 9223372036854776000
  True-0:
    op: "True"
    children: []
    eclass: "0"
    cost: 9223372036854776000
root_eclasses: []
class_data:
  "1":
    type: Value
  "0":
    type: Value

