tests/snapshots/files__levenshtein_distance_desugar.snap
---
source: tests/files.rs
expression: snapshot_content
---
3
5
5
Add: 8
Cons: 22
EditDist: 110
EmptyConst: 1
Length: 19
Min: 25
Num: 9
Unwrap: 9
