tests/snapshots/files__list_desugar.snap
---
source: tests/files.rs
expression: snapshot_content
---
Cons: 7
Nil: 1
list-append: 3
list-get: 3
list-get-demand: 3
list-length: 4
list-length-demand: 4
list-set: 2
